// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt component matches snapshot (default props) 1`] = `
<Dialog
  content={
    <React.Fragment>
      <div
        id="a11y-dialog-desc"
      />
      <div
        className="margin--top--double"
      >
        <Flex
          align="stretch"
          dataTest=""
          direction="row"
          justify="end"
          wrap={true}
        >
          <FlexItem
            dataTest=""
            shrink={true}
          >
            <Button
              iconPlacement="right"
              theme="blue"
            >
              bar
            </Button>
          </FlexItem>
          <FlexItem
            dataTest=""
            shrink={true}
          >
            <Button
              iconPlacement="right"
              theme="blue"
            >
              foo
            </Button>
          </FlexItem>
        </Flex>
      </div>
    </React.Fragment>
  }
  role="alertdialog"
/>
`;

exports[`Prompt component matches snapshot (default props) 2`] = `
<Dialog
  content={
    <React.Fragment>
      <div
        id="a11y-dialog-desc"
      />
      <div
        className="margin--top--double"
      >
        <Flex
          align="stretch"
          dataTest=""
          direction="row"
          justify="end"
          wrap={true}
        >
          <FlexItem
            dataTest=""
            shrink={true}
          >
            <Button
              iconPlacement="right"
              theme="blue"
            >
              bar
            </Button>
          </FlexItem>
          <FlexItem
            dataTest=""
            shrink={true}
          >
            <Button
              iconPlacement="right"
              theme="blue"
            >
              foo
            </Button>
          </FlexItem>
        </Flex>
      </div>
    </React.Fragment>
  }
  isOpen={true}
  role="alertdialog"
/>
`;

exports[`Prompt component matches snapshot (set all props) 1`] = `
<Dialog
  content={
    <React.Fragment>
      <div
        id="a11y-dialog-desc"
      >
        desc
      </div>
      <div
        className="margin--top--double"
      >
        <Flex
          align="stretch"
          dataTest=""
          direction="row"
          justify="end"
          wrap={true}
        >
          <FlexItem
            dataTest=""
            shrink={true}
          >
            <Button
              iconPlacement="right"
              theme="blue"
            >
              bar
            </Button>
          </FlexItem>
          <FlexItem
            dataTest=""
            shrink={true}
          >
            <Button
              iconPlacement="right"
              theme="blue"
            >
              foo
            </Button>
          </FlexItem>
        </Flex>
      </div>
    </React.Fragment>
  }
  isOpen={true}
  role="alertdialog"
  title="title"
/>
`;
